@@ -1,3 +1,12 @@
+SRM (0.5.1-1)
+
+  # Bug Fixes
+
+  * Correct debugging message that incorrectly announces the absence of gamma correction support when, in fact, it is supported.
+  
+-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Thu, 08 Feb 2024 12:23:21 -0300
+
+
 SRM (0.5.0-1)
 
   # New Features
